--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
+    "@types/mongoose": "^5.5.16",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
